chore: change license back to MIT
- Changed license from Non-Commercial to MIT
- Removed LICENSE-COMMERCIAL file
- Updated package.json license field to MIT
- Updated README badges and license section
- Updated copyright holder to stgmt
- Now fully open source for any use (personal and commercial)

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "api-testing"
   ],
   "author": "stgmt",
-  "license": "SEE LICENSE IN LICENSE-COMMERCIAL",
+  "license": "MIT",
   "dependencies": {
     "@ai-sdk/anthropic": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
