fix: improve CI reliability and unit tests
- Exclude e2e tests from CI workflow that require live MCP servers
- Use npm run test:unit instead of npm test to avoid connection failures
- Fix schema validation unit test for server configurations
- Test now correctly validates SSE servers (url) vs STDIO servers (command/args)
- CI environment doesn't have live servers, so e2e tests should be run manually

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,8 +29,9 @@ jobs:
     - name: Run linter
       run: npm run lint
       
-    - name: Run tests
-      run: npm test
+    # Run only unit tests in CI - e2e tests require live MCP servers
+    - name: Run unit tests
+      run: npm run test:unit
 
     - name: Build project
       run: npm run build
