feat: обновление Python wrapper до версии 1.4.1 с исправленным синтаксисом команд
- Обновлена версия до 1.4.1 для синхронизации с NPM пакетом
- Добавлен метод run_tools_test для поддержки команды tools
- Исправлена команда tools с позиционным аргументом test_file
- Запущена синхронизация команд через sync_commands.py
- Все 22 теста проходят успешно
- Готов к публикации в PyPI

--- a/python-wrapper/pyproject.toml
+++ b/python-wrapper/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mcp-server-tester"
-version = "1.0.0"
+version = "1.4.1"
 description = "Python wrapper for mcp-server-tester-sse-http-stdio NPM package"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -77,4 +77,4 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "--cov=mcp_server_tester --cov-report=html --cov-report=term-missing"
+addopts = "-v"
