feat: Add Docker Hub information to package.json and README
- Added Docker repository information to package.json
- Added Docker Hub badge to README header
- Added comprehensive Docker Support section with examples
- Added Docker installation method in Quick Start
- Updated Installation section with Docker option
- Added docker keyword to package.json

The Docker image is available at: docker pull stgmt/mcp-server-tester

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "mcp-tester",
     "eventSource",
     "process-communication",
-    "api-testing"
+    "api-testing",
+    "docker"
   ],
   "author": "stgmt",
   "license": "MIT",
@@ -95,5 +96,9 @@
   "bugs": {
     "url": "https://github.com/stgmt/mcp-server-tester-sse-http-stdio/issues"
   },
-  "homepage": "https://github.com/stgmt/mcp-server-tester-sse-http-stdio#readme"
+  "homepage": "https://github.com/stgmt/mcp-server-tester-sse-http-stdio#readme",
+  "docker": {
+    "repository": "https://hub.docker.com/r/stgmt/mcp-server-tester",
+    "image": "stgmt/mcp-server-tester"
+  }
 }
