ci: Унифицированная синхронизация README из корня во все платформы
- dockerhub-description.yml теперь использует корневой README.md
- pypi-publish.yml копирует README из корня перед публикацией
- Единый источник правды для документации на всех платформах

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -117,6 +117,12 @@ jobs:
           echo "📦 Version unchanged: $CURRENT_VERSION"
         fi
     
+    - name: Copy README from root
+      if: steps.version-check.outputs.should-publish == 'true'
+      run: |
+        # Copy the main README to python-wrapper for PyPI
+        cp ../README.md ./README.md
+    
     - name: Build package
       if: steps.version-check.outputs.should-publish == 'true'
       run: |
