--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'python-wrapper/README.md'
+      - 'README.md'
       - '.github/workflows/dockerhub-description.yml'
   workflow_dispatch:
 
@@ -22,6 +22,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: stgmt/mcp-server-tester
-          readme-filepath: ./python-wrapper/README.md
-          short-description: "Universal framework for programmatic unit/integration testing of MCP servers across all protocols"
+          readme-filepath: ./README.md
+          short-description: "Высококлассный инструмент для тестирования MCP серверов с поддержкой SSE-HTTP-STDIO, Bearer токенами и декларативными тестами"
           enable-url-completion: true
