fix: Fix Docker workflows - remove unsupported platform and update descriptions
- Remove darwin/arm64 platform from docker-publish.yml (not supported by Docker)
- Fix repository name in dockerhub-description.yml to match actual repo
- Update short-description to English for consistency with README

These changes fix Docker build failures and ensure proper README sync.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,7 +52,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64,linux/arm/v7,darwin/arm64
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
         push: true
         tags: |
           stgmt/mcp-server-tester-sse-http-stdio:${{ steps.version.outputs.version }}
