chore: cleanup repository - remove temporary and obsolete files
- Removed README-OLD.md (obsolete documentation)
- Removed test/token related temporary files (*.txt)
- Removed commands_extracted.json temporary file
- Removed all .bak backup files from python-wrapper
- Enhanced .gitignore to prevent future temporary files
- Added patterns for *.bak, *.backup, *.old, *-OLD.* files
- Added patterns for test-*.txt and token-*.txt files

Repository is now production ready without temporary artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ tmp/
 temp/
 *.tmp
 *.temp
+*.bak
+*.backup
+*.old
+*-OLD.*
+*.orig
 
 # Secrets and credentials
 *.key
@@ -50,6 +55,10 @@ credentials/
 # Local test files
 test-local.yaml
 test-*.json
+test-*.txt
+token-*.txt
+platform-*.txt
+commands_extracted.json
 !examples/*.json
 !examples/*.yaml
 
